src/tests/fixtures/arguments/ObjectLiteralArgument.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  hello({ greeting }: { greeting: { foo: string; bar: string } }): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/ObjectLiteralArgument.invalid.ts:4:35 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with a `/** @gql */` tag such as `/** @gqlType */` or `/** @gqlInput **/`?

4   hello({ greeting }: { greeting: { foo: string; bar: string } }): string {
                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
